# Penguin-TPU

./: .gitignore  AGENTS.md  README.md  SOUL.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  codex-autofix-ci.yml
docs/architecture/: repo-plan.md
docs/flows/: nexys-video-hello-world-bringup.md
docs/guides/: verilog-systemverilog-style-guide.md
docs/plans/: scalar-core-encoding-and-rtl-plan.md
docs/reviews/: npu-model-simulator-refactor-plan.md  pi0-workload-roofline-analysis.md  tensor-arch-decision-study.md  upstream-npu-spec-merge-review.md
docs/specs/: architecture-spec.md  configuration-parameters-spec.md  greencard.md  memory-organization-spec.md  microarchitecture-spec.md  scalar-functional-subset.md
examples/: __init__.py  dma_multichannel.py  gemma_attention.py  gemma_decoder.py  gemma_mlp.py  gemma_workloads.py  linear.py  linear_large.py  matmul.py  matmul_large.py  roofline_report.py  scalar_matmul.py
penguin-compiler/: README.md  pyproject.toml
penguin-compiler/src/penguin_compiler/: __init__.py  bundle.py  cli.py  model_package.py  rtl.py
penguin-compiler/src/penguin_compiler/codegen/: __init__.py  gemma.py  schedule.py
penguin-compiler/src/penguin_compiler/export/: __init__.py  capture.py  fixed_gemma.py
penguin-compiler/src/penguin_compiler/pack/: __init__.py  tensors.py
penguin-model/: README.md  pyproject.toml
penguin-model/penguin_model/: __init__.py  arch_state.py  assembler.py  bandwidth.py  bundle.py  cli.py  core.py  core_config.py  example_workloads.py  exu.py  idu.py  ifu.py  instructions.py  isa.py  memory.py  roofline.py  scalar_encoding.py  simulation.py  stage_data.py  tensor.py  testbench.py  uop.py
penguin-model/penguin_model/logging/: __init__.py  logger.py
penguin-model/src/penguin_model/: __init__.py  cli.py
rtl/constraints/: NexysVideoMIG.prj  NexysVideo_Master.xdc
rtl/penguin_tpu/: PenguinDramAxiBridge.v  PenguinDramClockCrossing.v  PenguinScalarUartHelloTop.v  PenguinUartHelloTop.v  Uart.v  UartRx.v  UartTx.v  penguin_scalar_uart_hello_top.v  penguin_uart_hello_top.v  uart.v  uart_rx.v  uart_tx.v
rtl/penguin_tpu/scalar/: PenguinPreliminaryVpu.v  PenguinScalarAlu.v  (+17 more)
scripts/: generate_program_symbol_tables.py  generate_scalar_programs.py  import_riscv_rv32ui_tests.py  schedule_tensor_example_programs.py
scripts/vivado/: 0_remove_project.sh  1_create_project.tcl  2_add_files.tcl  3_generate_bitstream.tcl  3_generate_vivado_ip.tcl  4_generate_bitstream.tcl  4_program_device.tcl  5_program_device.tcl  6_cleanup.sh  read_uart_hello.py  run_fpga_bringup.sh  run_hello_world_bringup.sh
tests/: test_assembly_parser.py  test_compiler_rtl_rom.py  test_compiler_schedule.py  test_cycle_sim.py  test_executable_bundle.py  test_execution_flow_trace.py  test_gemma_examples.py  test_model_export.py  test_mxu_model.py  test_python_model.py  test_riscv_isa_programs.py  test_roofline_model.py  test_scalar_directed_programs.py  test_scalar_encoding.py  test_scalar_performance.py  test_scalar_workloads.py  test_tensor_examples.py  test_tensor_workload_state.py  test_vpu_model.py  test_xlu_model.py  trace_utils.py
tests/cocotb/: BUFG.v  Bf16Adder.v  ClockingWizard.v  Mig7Series.v  tb_preliminary_vpu.py  tb_scalar_alu.py  tb_scalar_branch_unit.py  tb_scalar_core.py  tb_scalar_decoder.py  tb_scalar_lsu.py  tb_scalar_mmio_counter.py  tb_scalar_regfile.py  tb_scalar_uart_hello.py  tb_uart_hello.py  test_preliminary_vpu.py  test_scalar_blocks.py  test_scalar_core.py  test_scalar_decoder.py  test_scalar_mmio_counter.py  test_scalar_uart_hello.py  test_uart_hello.py  verilog_sources.py
(+249 files in other folders)
