[project]
name = "penguin-tpu-workspace"
version = "0.1.0"
description = "Workspace for the Penguin TPU software and hardware stack"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "penguin-compiler",
    "penguin-model",
    "slackbot",
    "json5>=0.13.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
  "cocotb>=1.8,<1.9",
  "pytest>=8.3",
]

[tool.uv.workspace]
members = [
  "penguin-compiler",
  "penguin-model",
]

[tool.uv.sources]
penguin-compiler = { workspace = true }
penguin-model = { workspace = true }
slackbot = { git = "https://github.com/penguin-tpu/SlackBot.git" }

[tool.pytest.ini_options]
addopts = "-ra"
